fix overflow issue on form submission

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,6 +8,10 @@ p {
     box-sizing: content-box;
 }
 
+body {
+    overflow: hidden;
+}
+
 ul {
     padding-inline-start: 0;
 }
